# 3D-Web-Sandbox

./: DESIGN_AND_ROADMAP.md  PERFORMANCE.md  README.md  index.html
3d-sandbox/: index.html  package-lock.json  package.json
3d-sandbox/src/: App.jsx
rust-physics-sandbox/: BUILD_INSTRUCTIONS.md  Cargo.toml  serve.py
rust-physics-sandbox/elide/: main.py  orchestrator.py  pyproject.toml
rust-physics-sandbox/src/: lib.rs  physics.rs  render.rs  shader.wgsl  soft_body.rs
rust-physics-sandbox/static/: index.html
rust-physics-sandbox/static/pkg/: rust_physics_sandbox.d.ts  rust_physics_sandbox.js  rust_physics_sandbox_bg.wasm  rust_physics_sandbox_bg.wasm.d.ts
rust-physics-sandbox/wasm-bindgen-0.2.90-x86_64-unknown-linux-musl/: wasm2es6js
