[package]
name = "rust-physics-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly interaction
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Physics
rapier3d = { version = "0.17", features = ["wasm-bindgen"] }
salva3d = "0.10" # Note: Check for latest compatible versions
nalgebra = "0.32"

# Graphics (WebGPU)
wgpu = { version = "0.19", features = ["webgl"] }
winit = { version = "0.29", features = ["rwh_05"] } 
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"

# Async
wasm-bindgen-futures = "0.4"
